host info; multiprocessing watch

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+	<h1>SmartHouse system</h1><br />
+	Running on {{ info.host }}/{{ info.ip }} host <br />
     <ul id="sensors">
     {% for sensor in data %}
         <li>
