--- a/web-frontend/templates/index.html
+++ b/web-frontend/templates/index.html
@@ -20,23 +20,36 @@
         margin: 30px 0;
       }
     </style>
+    <script type="text/JavaScript">
+        function timedRefresh(timeoutPeriod) {
+            // setTimeout("location.reload(true);",timeoutPeriod);
+        }
+    </script>
+
 </head>
-<body>
+<body onload="timedRefresh(5000);">
     <div class="container-narrow">
         <h1>SmartHouse system</h1><br />
-        <div class="well">Running on {{ info.host }}/{{ info.ip }} host </div>
+        <div class="alert alert-info">Running on {{ info.host }}/{{ info.ip }} host </div>
         <!-- <div id="sensors"> -->
+        <div class="accordion" id="accordion2">
         {% for sensor in data %}
-            <div class="well">
-                <h2>{{ sensor.name }}</h2>
-                <table class="table table-striped">
-                <ul class="sensor_data">
-                {% for value in sensor.data %}
-                    <tr> <td>{{ value[0] }}</td> <td>{{ value[1] }} </td>
-                {% endfor %}
-                </table>
+            <div class="accordion-group">
+                <div class="accordion-heading">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse{{ loop.index }}">{{ sensor.name }}</a>
+                </div>
+                <div id="collapse{{ loop.index }}" class="accordion-body collapse in">
+                  <div class="accordion-inner">
+                    <table class="table table-striped">
+                    {% for value in sensor.data %}
+                        <tr> <td width="33%">{{ value[0] }}</td> <td>{{ value[1] }} </td>
+                    {% endfor %}
+                    </table>
+                  </div>
+                </div>
             </div>
         {% endfor %}
+        </div>
         <!-- </div> -->
 
       <hr>
@@ -48,5 +61,6 @@
 
     <script src="/static/js/jquery-1.8.3.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/bootstrap/js/bootstrap-transition.js"></script>
 </body>
 </html>
