--- a/web-frontend/templates/index.html
+++ b/web-frontend/templates/index.html
@@ -1,67 +1,9 @@
-<!doctype html>
+{% extends "base.html" %}
 
-<html lang="ru">
-<head>
-    <title>SmartHouse {{ info.version }}</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+{% block title %}Home - {% endblock %}
 
-    <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
-
-      /* Custom container */
-      .container-narrow {
-        margin: 0 auto;
-        max-width: 700px;
-      }
-      .container-narrow > hr {
-        margin: 30px 0;
-      }
-    </style>
-    <script type="text/JavaScript">
-        function timedRefresh(timeoutPeriod) {
-            // setTimeout("location.reload(true);",timeoutPeriod);
-        }
-    </script>
-
-</head>
-<body onload="timedRefresh(5000);">
-    <div class="container-narrow">
-        <h1>SmartHouse system</h1><br />
-        <div class="alert alert-info">Running on {{ info.host }}/{{ info.ip }} host </div>
-        <!-- <div id="sensors"> -->
-        <div class="accordion" id="accordion2">
-        {% for sensor in data %}
-            <div class="accordion-group">
-                <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse{{ loop.index }}">{{ sensor.name }}</a>
-                </div>
-                <div id="collapse{{ loop.index }}" class="accordion-body collapse in">
-                  <div class="accordion-inner">
-                    <table class="table table-striped">
-                    {% for value in sensor.data %}
-                        <tr> <td width="33%">{{ value[0] }}</td> <td>{{ value[1] }} </td>
-                    {% endfor %}
-                    </table>
-                  </div>
-                </div>
-            </div>
-        {% endfor %}
-        </div>
-        <!-- </div> -->
-
-      <hr>
-
-      <div class="footer">
-        <p>&copy; Antigluk 2012</p>
-      </div>
-    </div> <!-- /container -->
-
-    <script src="/static/js/jquery-1.8.3.min.js"></script>
-    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/bootstrap/js/bootstrap-transition.js"></script>
-</body>
-</html>
+{% block content %}
+<div class="well">
+    Температура в подсобке: {% if "msp430" in data %} {{ data.msp430.T1 }} {% else %} N/A {% endif %}
+</div>
+{% endblock %}
