msp430 not connected alert on index

--- a/web-frontend/templates/all_sensors.html
+++ b/web-frontend/templates/all_sensors.html
@@ -6,7 +6,7 @@
   {% if "msp430" in info %}
   <div class="alert alert-success">msp430 подключен на порт {{ info.msp430.port }} </div>
   {% else %}
-  <div class="alert alert-error">Похоже msp430 не подключен...</div>
+  <div class="alert alert-error">Похоже, msp430 не подключен...</div>
   {% endif %}
 
   <div class="accordion" id="accordion2">
