--- a/web-frontend/templates/index.html
+++ b/web-frontend/templates/index.html
@@ -3,6 +3,10 @@
 {% block title %}Home - {% endblock %}
 
 {% block content %}
+  {% if "msp430" not in info %}
+  <div class="alert alert-error">Похоже, внешние датчики не подключены...</div>
+  {% endif %}
+
 <div class="well">
     Температура в подсобке: {% if "msp430" in data %} {{ data.msp430.T1 }}&deg;С {% else %} N/A {% endif %}
 </div>
