--- a/web-frontend/templates/base.html
+++ b/web-frontend/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <title>{% block title %}{% endblock %}SmartHouse {{ info.version }}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
 
     <style type="text/css">
       body {
