--- a/web-frontend/templates/base.html
+++ b/web-frontend/templates/base.html
@@ -1,79 +1,45 @@
 <!doctype html>
-
-<html lang="ru">
-<head>
+<html>
+  
+  <head>
     <title>{% block title %}{% endblock %}SmartHouse {{ info.version }}</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
-
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-
-      html { 
-        background: url(static/img/bg.jpg) no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-      }
-
-      /* Custom container */
-      .container-narrow {
-        margin: 0 auto;
-        max-width: 700px;
-      }
-      .container-narrow > hr {
-        margin: 30px 0;
-      }
-    </style>
-    <script type="text/JavaScript">
-        function timedRefresh(timeoutPeriod) {
-            // setTimeout("location.reload(true);",timeoutPeriod);
-        }
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <link rel="stylesheet" href="https://app.divshot.com/css/divshot-util.css">
+    <link rel="stylesheet" href="https://app.divshot.com/themes/cyborg/bootstrap.min.css">
+    <link rel="stylesheet" href="https://app.divshot.com/css/bootstrap-responsive.css">
+    <script src="/static/js/jquery-1.8.3.min.js"></script>
     {% block head %}
     {% endblock %}
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+  </head>
+  
+  <body>
+    <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">SmartHouse 502</a>
-          <div class="nav-collapse collapse">
+          <a class="brand" href="#">SmartHouse <b>502</b></a>
+          <div class="navbar-content">
             <ul class="nav">
               <li><a href="/">Home</a></li>
               <li><a href="/all">All sensors</a></li>
               <li><a href="/charts">Charts</a></li>
               <li><a href="/info">System info</a></li>
             </ul>
-          </div><!--/.nav-collapse -->
+          </div>
         </div>
       </div>
     </div>
-
-
-
-    <div class="container">
+    <div class="container-fluid">
         {% block content %}
         {% endblock %}
-
-      <hr>
-
-      <div class="footer">
+        
+        <hr>
+        <div class="footer">
         <p>&copy; Antigluk 2012<br />{{ info.host }}/{{ info.ip }}</p>
-      </div>
-    </div> <!-- /container -->
-
-    <script src="/static/js/jquery-1.8.3.min.js"></script>
+        </div>
+    </div>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap-transition.js"></script>
-</body>
+  </body>
+
 </html>
