--- a/web-frontend/templates/base.html
+++ b/web-frontend/templates/base.html
@@ -24,6 +24,7 @@
               <li><a href="/all">All sensors</a></li>
               <li><a href="/charts">Charts</a></li>
               <li><a href="/info">System info</a></li>
+              <li><a href="/video">Video</a></li>
             </ul>
           </div>
         </div>
