--- a/web-frontend/templates/video.html
+++ b/web-frontend/templates/video.html
@@ -1,7 +1,29 @@
 {% extends "base.html" %}
 
-{% block title %}System info - {% endblock %}
+{% block title %}Video - {% endblock %}
+
+{% block head %}
+<script>
+
+</script>
+{% endblock %}
 
 {% block content %}
-Видео
+<h1>Видеонаблюдение</h1>
+
+  {% if "video" not in info %}
+  <div class="alert alert-error">Похоже, камера не подключена...</div>
+  {% else %}
+  
+  <div class="alert alert-success">Камера подключена к {{ info.video.port }} </div>
+
+      {% if img %}
+      <img src="/static/{{ img }}" style="width:320px;height:240px" />
+      {% else %}
+      Пока нету снимков.
+      {% endif %}
+  
+  {% endif %}
+
+
 {% endblock %}
