--- a/web-frontend/templates/video.html
+++ b/web-frontend/templates/video.html
@@ -16,15 +16,15 @@
   {% else %}
   
   <div class="alert alert-success">Камера подключена к {{ info.video.port }} </div>
-<!-- 
+
       {% if img %}
       <img src="/static/{{ img }}" style="width:320px;height:240px" />
       {% else %}
       Пока нету снимков.
       {% endif %}
- -->  
+  
 
- <embed src="http://aiko.home:8090/test.swf" width="550" height="400"></embed>.
+ <!-- <embed src="http://aiko.home:8090/test.swf" width="550" height="400"></embed>. -->
 
   {% endif %}
 
