--- a/web-frontend/templates/video.html
+++ b/web-frontend/templates/video.html
@@ -6,8 +6,8 @@
 <script>
     $(document).ready(function() {
         setInterval(function() {
-            $(photo)[0].src = "/static/{{ img }}" + new Date().getTime();
-        }, 1000);
+            $(photo)[0].src = "/static/{{ img }}#" + new Date().getTime();
+        }, 2000);
     })
 </script>
 {% endblock %}
