--- a/web-frontend/templates/video.html
+++ b/web-frontend/templates/video.html
@@ -26,7 +26,7 @@
             }
         });
 
-        {% if img %}
+        {% if enabled %}
         $('#video-toggle').bootstrapSwitch('setActive', true);
         {% else %}
         $('#video-toggle').bootstrapSwitch('setActive', false);
