--- a/web-frontend/templates/video.html
+++ b/web-frontend/templates/video.html
@@ -27,9 +27,9 @@
         });
 
         {% if enabled %}
-        $('#video-toggle').bootstrapSwitch('setActive', true);
+        $('#video-toggle').bootstrapSwitch('setState', true);
         {% else %}
-        $('#video-toggle').bootstrapSwitch('setActive', false);
+        $('#video-toggle').bootstrapSwitch('setState', false);
         {% endif %}
     })
 </script>
