--- a/web-frontend/templates/video.html
+++ b/web-frontend/templates/video.html
@@ -21,6 +21,7 @@
               $.get('/video/enable');
               console.log('video enabled');
             } else {
+              $('#photo')[0].src = "/noimg";
               $.get('/video/disable');
               console.log('video disabled');
             }
