--- a/web-frontend/templates/base.html
+++ b/web-frontend/templates/base.html
@@ -5,9 +5,9 @@
     <title>{% block title %}{% endblock %}SmartHouse {{ info.version }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <link rel="stylesheet" href="https://app.divshot.com/css/divshot-util.css">
-    <link rel="stylesheet" href="https://app.divshot.com/themes/cyborg/bootstrap.min.css">
-    <link rel="stylesheet" href="https://app.divshot.com/css/bootstrap-responsive.css">
+    <!-- <link rel="stylesheet" href="/static/bootstrap/css/divshot-util.css"> -->
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap-responsive.css">
     <script src="/static/js/jquery-1.8.3.min.js"></script>
     {% block head %}
     {% endblock %}
@@ -36,7 +36,7 @@
         
         <hr>
         <div class="footer">
-        <p>&copy; Antigluk 2012<br />{{ info.host }}/{{ info.ip }}</p>
+        <p>&copy; Antigluk 2013<br />{{ info.host }}/{{ info.ip }}</p>
         </div>
     </div>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
