--- a/web-frontend/templates/base.html
+++ b/web-frontend/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block title %}{% endblock %}SmartHouse {{ info.version }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="/static/css/divshot-util.css">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/bootstrap-responsive.css">
